# mdm-processing

./: .gitignore  CLAUDE.md  README.md  data_processing.md  project_purpose.md  pyproject.toml
config/entities/: customer.yaml
config/source_channels/: crm_salesforce.yaml  legacy_import.yaml  web_signup.yaml
docs/: api_contract.md  config_format.md  fixture_format.md
fixtures/customer/: new_record_creates_master.yaml  no_shared_natural_key_creates_separate_masters.yaml  reprocess_unchanged_is_no_op.yaml  two_channels_share_natural_key.yaml  update_rematches_same_master.yaml
python/: pyproject.toml
python/src/mdm_processing/: conformance.py
python/src/mdm_processing/config/: loader.py  models.py
python/src/mdm_processing/core/: checksum.py  intra_source_dedup.py  matching.py  reads.py  recompute.py  records.py  repository.py  reprocessing.py  submit.py  survivorship.py  types.py
python/src/mdm_processing/storage/: in_memory.py
python/tests/: test_checksum.py  test_config.py  test_fixtures.py  test_intra_source_dedup.py  test_matching.py  test_reads.py  test_recompute.py  test_repository.py  test_reprocessing.py  test_submit.py  test_survivorship.py
